@@ -24,14 +24,32 @@
 # to the Free Software Foundation, Inc., 51 Franklin St,  Fifth Floor,
 # Boston, MA 02110-1301 USA.
 
+
 def agent_ipmi_sensors_arguments(params, hostname, ipaddress):
-    args = ''
+    args = []
 
-    args += " -u " + quote_shell_string(params["username"])
-    args += " -p " + quote_shell_string(params["password"])
-    args += " -l " + quote_shell_string(params["privilege_lvl"])
+    args += [ "-u", quote_shell_string(params["username"]) ]
+    args += [ "-p", quote_shell_string(params["password"]) ]
+    args += [ "-l", quote_shell_string(params["privilege_lvl"]) ]
 
-    args += " " + quote_shell_string(ipaddress)
-    return args
+    for opt, what in [
+        ("-D",                             "ipmi_driver"),
+        ("-k",                             "BMC_key"),
+        ("--driver-type",                  "driver_type"),
+        ('--quiet-cache',                  "quiet_cache"),
+        ("--sdr-cache-recreate",           "sdr_cache_recreate"),
+        ('--interpret-oem-data',           "interpret_oem_data"),
+        ('--output-sensor-state',          "output_sensor_state"),
+        ('--ignore-not-available-sensors', "output_sensor_thresholds"),
+        ('--output-sensor-thresholds',     "ignore_not_available_sensors"), ]:
+        this_param = params.get(what)
+        if this_param:
+            args.append( opt )
+            if not isinstance(this_param, bool):
+                args.append( quote_shell_string(this_param) )
+
+    args.append( quote_shell_string(ipaddress) )
+    return " ".join( args )
+
 
 special_agent_info['ipmi_sensors'] = agent_ipmi_sensors_arguments
