@@ -16,6 +16,7 @@
     * 3995 skype check: updated perfvariable and metric names, making their purpose more clear...
             NOTE: Please refer to the migration notes!
     * 3996 agent_netapp clustermode: now uses a fallback query to determine the node name if the intial query fails
+    * 4108 ipmi_sensors: new options available...
     * 3987 FIX: Check_MK Agent Access: Windows agent reported incorrect only from value
     * 3952 FIX: diskstat: fixed bug if multipath devices having an alias...
     * 3939 FIX: f5_bigip_conns: readded performance data and graphs...
